@@ -2,7 +2,10 @@
 
 package net.codecrete.usb.windows.gen.setupapi;
 
-import java.lang.foreign.*;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.VarHandle;
 /**
  * {@snippet :
@@ -16,23 +19,11 @@ import java.lang.invoke.VarHandle;
  */
 public class _SP_DEVINFO_DATA {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG$LAYOUT.withName("cbSize"),
-        MemoryLayout.structLayout(
-            Constants$root.C_LONG$LAYOUT.withName("Data1"),
-            Constants$root.C_SHORT$LAYOUT.withName("Data2"),
-            Constants$root.C_SHORT$LAYOUT.withName("Data3"),
-            MemoryLayout.sequenceLayout(8, Constants$root.C_CHAR$LAYOUT).withName("Data4")
-        ).withName("ClassGuid"),
-        Constants$root.C_LONG$LAYOUT.withName("DevInst"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("Reserved")
-    ).withName("_SP_DEVINFO_DATA");
     public static MemoryLayout $LAYOUT() {
-        return _SP_DEVINFO_DATA.$struct$LAYOUT;
+        return constants$0.const$2;
     }
-    static final VarHandle cbSize$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("cbSize"));
     public static VarHandle cbSize$VH() {
-        return _SP_DEVINFO_DATA.cbSize$VH;
+        return constants$0.const$3;
     }
     /**
      * Getter for field:
@@ -41,7 +32,7 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static int cbSize$get(MemorySegment seg) {
-        return (int)_SP_DEVINFO_DATA.cbSize$VH.get(seg);
+        return (int)constants$0.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -50,20 +41,19 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static void cbSize$set(MemorySegment seg, int x) {
-        _SP_DEVINFO_DATA.cbSize$VH.set(seg, x);
+        constants$0.const$3.set(seg, x);
     }
     public static int cbSize$get(MemorySegment seg, long index) {
-        return (int)_SP_DEVINFO_DATA.cbSize$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$0.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void cbSize$set(MemorySegment seg, long index, int x) {
-        _SP_DEVINFO_DATA.cbSize$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment ClassGuid$slice(MemorySegment seg) {
         return seg.asSlice(4, 16);
     }
-    static final VarHandle DevInst$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("DevInst"));
     public static VarHandle DevInst$VH() {
-        return _SP_DEVINFO_DATA.DevInst$VH;
+        return constants$0.const$4;
     }
     /**
      * Getter for field:
@@ -72,7 +62,7 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static int DevInst$get(MemorySegment seg) {
-        return (int)_SP_DEVINFO_DATA.DevInst$VH.get(seg);
+        return (int)constants$0.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -81,17 +71,16 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static void DevInst$set(MemorySegment seg, int x) {
-        _SP_DEVINFO_DATA.DevInst$VH.set(seg, x);
+        constants$0.const$4.set(seg, x);
     }
     public static int DevInst$get(MemorySegment seg, long index) {
-        return (int)_SP_DEVINFO_DATA.DevInst$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$0.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void DevInst$set(MemorySegment seg, long index, int x) {
-        _SP_DEVINFO_DATA.DevInst$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle Reserved$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Reserved"));
     public static VarHandle Reserved$VH() {
-        return _SP_DEVINFO_DATA.Reserved$VH;
+        return constants$0.const$5;
     }
     /**
      * Getter for field:
@@ -100,7 +89,7 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static long Reserved$get(MemorySegment seg) {
-        return (long)_SP_DEVINFO_DATA.Reserved$VH.get(seg);
+        return (long)constants$0.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -109,20 +98,20 @@ public class _SP_DEVINFO_DATA {
      * }
      */
     public static void Reserved$set(MemorySegment seg, long x) {
-        _SP_DEVINFO_DATA.Reserved$VH.set(seg, x);
+        constants$0.const$5.set(seg, x);
     }
     public static long Reserved$get(MemorySegment seg, long index) {
-        return (long)_SP_DEVINFO_DATA.Reserved$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$0.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void Reserved$set(MemorySegment seg, long index, long x) {
-        _SP_DEVINFO_DATA.Reserved$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$0.const$5.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
