@@ -2,7 +2,10 @@
 
 package net.codecrete.usb.windows.gen.user32;
 
-import java.lang.foreign.*;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.SegmentAllocator;
 import java.lang.invoke.VarHandle;
 /**
  * {@snippet :
@@ -18,25 +21,11 @@ import java.lang.invoke.VarHandle;
  */
 public class tagMSG {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_POINTER$LAYOUT.withName("hwnd"),
-        Constants$root.C_LONG$LAYOUT.withName("message"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("wParam"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("lParam"),
-        Constants$root.C_LONG$LAYOUT.withName("time"),
-        MemoryLayout.structLayout(
-            Constants$root.C_LONG$LAYOUT.withName("x"),
-            Constants$root.C_LONG$LAYOUT.withName("y")
-        ).withName("pt"),
-        MemoryLayout.paddingLayout(32)
-    ).withName("tagMSG");
     public static MemoryLayout $LAYOUT() {
-        return tagMSG.$struct$LAYOUT;
+        return constants$2.const$1;
     }
-    static final VarHandle hwnd$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("hwnd"));
     public static VarHandle hwnd$VH() {
-        return tagMSG.hwnd$VH;
+        return constants$2.const$2;
     }
     /**
      * Getter for field:
@@ -45,7 +34,7 @@ public class tagMSG {
      * }
      */
     public static MemorySegment hwnd$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)tagMSG.hwnd$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$2.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -54,17 +43,16 @@ public class tagMSG {
      * }
      */
     public static void hwnd$set(MemorySegment seg, MemorySegment x) {
-        tagMSG.hwnd$VH.set(seg, x);
+        constants$2.const$2.set(seg, x);
     }
     public static MemorySegment hwnd$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)tagMSG.hwnd$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$2.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void hwnd$set(MemorySegment seg, long index, MemorySegment x) {
-        tagMSG.hwnd$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle message$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("message"));
     public static VarHandle message$VH() {
-        return tagMSG.message$VH;
+        return constants$2.const$3;
     }
     /**
      * Getter for field:
@@ -73,7 +61,7 @@ public class tagMSG {
      * }
      */
     public static int message$get(MemorySegment seg) {
-        return (int)tagMSG.message$VH.get(seg);
+        return (int)constants$2.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -82,17 +70,16 @@ public class tagMSG {
      * }
      */
     public static void message$set(MemorySegment seg, int x) {
-        tagMSG.message$VH.set(seg, x);
+        constants$2.const$3.set(seg, x);
     }
     public static int message$get(MemorySegment seg, long index) {
-        return (int)tagMSG.message$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$2.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void message$set(MemorySegment seg, long index, int x) {
-        tagMSG.message$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle wParam$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("wParam"));
     public static VarHandle wParam$VH() {
-        return tagMSG.wParam$VH;
+        return constants$2.const$4;
     }
     /**
      * Getter for field:
@@ -101,7 +88,7 @@ public class tagMSG {
      * }
      */
     public static long wParam$get(MemorySegment seg) {
-        return (long)tagMSG.wParam$VH.get(seg);
+        return (long)constants$2.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -110,17 +97,16 @@ public class tagMSG {
      * }
      */
     public static void wParam$set(MemorySegment seg, long x) {
-        tagMSG.wParam$VH.set(seg, x);
+        constants$2.const$4.set(seg, x);
     }
     public static long wParam$get(MemorySegment seg, long index) {
-        return (long)tagMSG.wParam$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$2.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void wParam$set(MemorySegment seg, long index, long x) {
-        tagMSG.wParam$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle lParam$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("lParam"));
     public static VarHandle lParam$VH() {
-        return tagMSG.lParam$VH;
+        return constants$2.const$5;
     }
     /**
      * Getter for field:
@@ -129,7 +115,7 @@ public class tagMSG {
      * }
      */
     public static long lParam$get(MemorySegment seg) {
-        return (long)tagMSG.lParam$VH.get(seg);
+        return (long)constants$2.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -138,17 +124,16 @@ public class tagMSG {
      * }
      */
     public static void lParam$set(MemorySegment seg, long x) {
-        tagMSG.lParam$VH.set(seg, x);
+        constants$2.const$5.set(seg, x);
     }
     public static long lParam$get(MemorySegment seg, long index) {
-        return (long)tagMSG.lParam$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$2.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void lParam$set(MemorySegment seg, long index, long x) {
-        tagMSG.lParam$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$2.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle time$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("time"));
     public static VarHandle time$VH() {
-        return tagMSG.time$VH;
+        return constants$3.const$0;
     }
     /**
      * Getter for field:
@@ -157,7 +142,7 @@ public class tagMSG {
      * }
      */
     public static int time$get(MemorySegment seg) {
-        return (int)tagMSG.time$VH.get(seg);
+        return (int)constants$3.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -166,13 +151,13 @@ public class tagMSG {
      * }
      */
     public static void time$set(MemorySegment seg, int x) {
-        tagMSG.time$VH.set(seg, x);
+        constants$3.const$0.set(seg, x);
     }
     public static int time$get(MemorySegment seg, long index) {
-        return (int)tagMSG.time$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$3.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void time$set(MemorySegment seg, long index, int x) {
-        tagMSG.time$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$3.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment pt$slice(MemorySegment seg) {
         return seg.asSlice(36, 8);
@@ -182,7 +167,7 @@ public class tagMSG {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
